[package]
name = "lend_worker_stellar"
version = "0.3.0"
edition = "2024"

[workspace]
members = [
    "crates/lw-config",
    "crates/lw-domain",
    "crates/lw-storage",
    "crates/lw-chain",
    "crates/lw-app",
]

# The crate ships no real doctests (the only doc comments that rustdoc would
# treat as doctests are the `sol!` definitions, now in lw-config).
[lib]
doctest = false

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3

# The binary itself only needs bootstrap (logging/env/heartbeat) deps + the
# workspace layer crates. Everything else moved into those crates; the few deps
# used solely by the integration tests live in [dev-dependencies] below.
[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
eyre = "0.6.12"
fern = { version = "0.6.2", features = ["colored"] }
itertools = "0.11.0"
log = "0.4.17"
reqwest = "0.12"
tokio = { version = "1.29.0", features = ["full"] }
lw-config = { path = "crates/lw-config" }
lw-domain = { path = "crates/lw-domain" }
lw-storage = { path = "crates/lw-storage" }
lw-chain = { path = "crates/lw-chain" }
lw-app = { path = "crates/lw-app" }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
async-trait = "0.1.64"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "derive",
    "uuid",
    "chrono",
    "json",
] }
uuid = { version = "1", features = ["serde", "v4"] }
