[package]
name = "lw-app"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
itertools = "0.11.0"
log = "0.4.17"
serde_json = "1.0"
tokio = { version = "1.29.0", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
lw-config = { path = "../lw-config" }
lw-domain = { path = "../lw-domain" }
lw-storage = { path = "../lw-storage" }
lw-chain = { path = "../lw-chain" }
