[package]
name = "lw-chain"
version = "0.1.0"
edition = "2024"

[dependencies]
stellar-xdr = { version = "27.0.0", features = ["std", "base64"] }
stellar-strkey = "0.0.16"
stellar-rpc-client = "26.0.0"
async-trait = "0.1.64"
chrono = { version = "0.4.38", features = ["serde"] }
eyre = "0.6.12"
futures = "0.3.5"
log = "0.4.17"
serde_json = "1.0"
tokio = { version = "1.29.0", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
lw-config = { path = "../lw-config" }
lw-domain = { path = "../lw-domain" }
lw-storage = { path = "../lw-storage" }
