[package]
name = "lw-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "derive",
    "uuid",
    "chrono",
    "json",
] }
uuid = { version = "1", features = ["serde", "v4"] }
lw-config = { path = "../lw-config" }
