[package]
name = "lw-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.64"
chrono = { version = "0.4.38", features = ["serde"] }
eyre = "0.6.12"
log = "0.4.17"
once_cell = "1.19.0"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "derive",
    "uuid",
    "chrono",
    "json",
] }
uuid = { version = "1", features = ["serde", "v4"] }
lw-config = { path = "../lw-config" }
lw-domain = { path = "../lw-domain" }
